<resources>
    <string name="add_analysis">Add Analysis</string>
    <string name="add_null_move">Add Null Move</string>
    <string name="admob_app_id">ca-app-pub-2725968421316486~2766072654</string>
    <string name="after_selected">After Selected</string>
    <string name="analysis">Analysis</string>
    <string name="analysis_mode">Analysis Mode</string>
    <string name="analyzing">analyzing</string>
    <string name="app_name">Chess</string>
    <string name="auto_backward">Auto Backward</string>
    <string name="auto_forward">Auto Forward</string>
    <string name="background_processing">Background processing</string>
    <string name="before_selected">Before Selected</string>
    <string name="bishop">Bishop</string>
    <string name="black">Black</string>
    <string name="black_king_castle">Black king castle</string>
    <string name="black_mate">Game over, black mates!</string>
    <string name="black_queen_castle">Black queen castle</string>
    <string name="black_square_character">□</string>
    <string name="blacks_move">"Black's move"</string>
    <string name="blind_mode">Blindfold mode</string>
    <string name="book">Book:</string>
    <string name="button_new_game">New Game</string>
    <string name="cancel">Cancel</string>
    <string name="castling_flags">Castling Flags</string>
    <string name="clear_board">Clear Board</string>
    <string name="clipboard">Clipboard</string>
    <string name="comment_after">After:</string>
    <string name="comment_before">Before:</string>
    <string name="comment_move">Move:</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="comp_vs_comp">Computer vs Computer</string>
    <string name="configure_network_engine">Configure Network Engine</string>
    <string name="confirm_again">Replay</string>
    <string name="confirm_buy">Buy</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_continue">Continue</string>
    <string name="confirm_next">Next Level</string>
    <string name="confirm_play">Play</string>
    <string name="confirm_save">Save</string>
    <string name="confirm_togame">Back</string>
    <string name="confirm_tomenu">To Menu</string>
    <string name="confirm_wait">Please wait…</string>
    <string name="confirm_yes">Yes</string>
    <string name="copy_game">Copy Game to Clipboard</string>
    <string name="copy_position">Copy Position to Clipboard</string>
    <string name="create_network_engine">Create Network Engine</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_file_question">Delete file?</string>
    <string name="delete_game">Delete game?</string>
    <string name="delete_named_file">Delete file %s?</string>
    <string name="delete_network_engine">Delete Network Engine?</string>
    <string name="draw_50">Game over, draw by 50 move rule!</string>
    <string name="draw_agree">Game over, draw by agreement!</string>
    <string name="draw_no_mate">Game over, draw by impossibility of mate!</string>
    <string name="draw_rep">Game over, draw by repetition!</string>
    <string name="edit_board">Edit Board</string>
    <string name="edit_comments">Edit Comments</string>
    <string name="edit_game">Edit Game</string>
    <string name="edit_headers">Edit Headers</string>
    <string name="edit_move_counters">Edit Move Counters</string>
    <string name="edit_options_title">UCI Options</string>
    <string name="edit_randomization">Edit Randomization</string>
    <string name="edit_replay_game">Edit/re-play Game</string>
    <string name="edit_strength">Edit Strength</string>
    <string name="enPassant">En passant</string>
    <string name="en_passant_file">En Passant File</string>
    <string name="engine">Engine</string>
    <string name="engine_error">Engine error</string>
    <string name="engine_name">Engine name</string>
    <string name="engine_name_in_use">Engine name in use</string>
    <string name="engine_options">Engine Options</string>
    <string name="engine_terminated">Engine terminated</string>
    <string name="err_black_num_kings">Black must have exactly one king</string>
    <string name="err_invalid_castling_flags">Invalid castling flags</string>
    <string name="err_invalid_en_passant_square">Invalid en passant square</string>
    <string name="err_invalid_piece">Invalid piece</string>
    <string name="err_invalid_side">Invalid side</string>
    <string name="err_king_capture_possible">King capture possible</string>
    <string name="err_pawn_on_first_last_rank">Pawn on first/last rank</string>
    <string name="err_too_few_spaces">Too few spaces</string>
    <string name="err_too_many_black_pieces">Too many black pieces</string>
    <string name="err_too_many_columns">Too many columns</string>
    <string name="err_too_many_rows">Too many rows</string>
    <string name="err_too_many_white_pieces">Too many white pieces</string>
    <string name="err_white_num_kings">White must have exactly one king</string>
    <string name="failed_to_delete_game">Failed to delete game</string>
    <string name="failed_to_read_pgn_data">Failed to read PGN data</string>
    <string name="failed_to_save_game">Failed to save game</string>
    <string name="failed_to_start_engine">Failed to start engine</string>
    <string name="fewer_variations">Fewer Variations</string>
    <string name="file_too_large">File too large</string>
    <string name="filename">Filename:</string>
    <string name="filter_text">Search…</string>
    <string name="flip_board">Flip Board</string>
    <string name="fullmove">Fullmove counter:</string>
    <string name="game_saved">Game saved</string>
    <string name="get_fen">Retrieve Position</string>
    <string name="go_back">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="goto_end_variation">Goto End of Variation</string>
    <string name="goto_move">Goto move</string>
    <string name="goto_next_variation">Goto Next Variation</string>
    <string name="goto_prev_variation">Goto Previous Variation</string>
    <string name="goto_start_game">Goto Start of Game</string>
    <string name="goto_start_variation">Goto Start of Variation</string>
    <string name="halfmove">Halfmove clock:</string>
    <string name="header_date">Date:</string>
    <string name="header_event">Event:</string>
    <string name="header_round">Round:</string>
    <string name="header_site">Site:</string>
    <string name="heavy_cpu_usage">Heavy CPU usage</string>
    <string name="hide_statistics">Hide statistics</string>
    <string name="highlight_last_move_summary">Draw rectangle around last moved piece</string>
    <string name="highlight_last_move_title">Highlight last move</string>
    <string name="host_name">Host name</string>
    <string name="initial_position">Initial Position</string>
    <string name="internal_book">&lt;Internal Book></string>
    <string name="invalid_move">Invalid move</string>
    <string name="invalid_network_port">Invalid network port</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="knight">Knight</string>
    <string name="load_fen_title">Load Position</string>
    <string name="load_game">Load game from PGN file</string>
    <string name="load_game_title">Edit File / Load Game</string>
    <string name="load_last_file">Load from last file</string>
    <string name="load_next_game">Load Next Game</string>
    <string name="load_position">Load position from file</string>
    <string name="load_prev_game">Load Previous Game</string>
    <string name="load_save_menu">Load/Save Game</string>
    <string name="load_scid_game">Load game from Scid file</string>
    <string name="load_scid_game_title">Load Scid Game</string>
    <string name="lot_cpu_power">Chess is using a lot of CPU power</string>
    <string name="main_button_info">INFO</string>
    <string name="main_button_menu">MENU</string>
    <string name="main_button_new">NEW</string>
    <string name="main_button_rate">RATE</string>
    <string name="main_button_undo">UNDO</string>
    <string name="main_msg_1">Easy Level : unlocked</string>
    <string name="main_msg_2">Middle Level : unlocked</string>
    <string name="main_msg_3">Hard Level : unlocked</string>
    <string name="main_msg_4">Advanced Level : unlocked</string>
    <string name="main_msg_5">Expert Level : unlocked</string>
    <string name="main_msg_6">Candidate Master : unlocked</string>
    <string name="main_msg_7">Master Level : unlocked</string>
    <string name="main_msg_8">Grand Master : unlocked</string>
    <string name="main_msg_9">Champion Level: unlocked</string>
    <string name="main_msg_black">BLACK WIN!</string>
    <string name="main_msg_draw">DRAW</string>
    <string name="main_msg_lose">You Lose</string>
    <string name="main_msg_next">Next Level : unlocked</string>
    <string name="main_msg_quit">Are you sure you want to quit?</string>
    <string name="main_msg_small_draw">Try Again or Continue?</string>
    <string name="main_msg_small_lose">Try Again :)</string>
    <string name="main_msg_small_win">Congratulations!</string>
    <string name="main_msg_white">WHITE WIN!</string>
    <string name="main_msg_win">YOU WIN!</string>
    <string name="material_diff_summary">Displays an additional subtitle for captured pieces</string>
    <string name="material_diff_title">Show Material Difference</string>
    <string name="menu_button_play">PLAY</string>
    <string name="menu_button_settings">SETTINGS</string>
    <string name="menu_level_0">"BEGINNER
LEVEL"</string>
    <string name="menu_level_1">"EASY
LEVEL"</string>
    <string name="menu_level_2">"MIDDLE
LEVEL"</string>
    <string name="menu_level_3">"HARD
LEVEL"</string>
    <string name="menu_level_4">"ADVANCED
LEVEL"</string>
    <string name="menu_level_5">"EXPERT
LEVEL"</string>
    <string name="menu_level_50">"TWO
PLAYERS"</string>
    <string name="menu_level_6">"CANDIDATE
MASTER"</string>
    <string name="menu_level_7">"MASTER
LEVEL"</string>
    <string name="menu_level_8">"GRAND
MASTER"</string>
    <string name="menu_level_9">"CHAMPION
LEVEL"</string>
    <string name="menu_level_close">To unlock this level you must win the previous level</string>
    <string name="menu_level_plan_0">BEGINNER LEVEL</string>
    <string name="menu_level_plan_1">EASY LEVEL</string>
    <string name="menu_level_plan_2">MIDDLE LEVEL</string>
    <string name="menu_level_plan_3">HARD LEVEL</string>
    <string name="menu_level_plan_4">ADVANCED LEVEL</string>
    <string name="menu_level_plan_5">EXPERT LEVEL</string>
    <string name="menu_level_plan_50">TWO PLAYERS</string>
    <string name="menu_level_plan_6">CANDIDATE MASTER</string>
    <string name="menu_level_plan_7">MASTER LEVEL</string>
    <string name="menu_level_plan_8">GRAND MASTER</string>
    <string name="menu_level_plan_9">CHAMPION LEVEL</string>
    <string name="set_button_back">BACK</string>
    <string name="set_button_rate">☆☆☆☆☆</string>
    <string name="set_helper_title">HELPER:</string>
    <string name="set_move_0">WHITE</string>
    <string name="set_move_1">BLACK</string>
    <string name="set_move_alter">ALTERNATELY</string>
    <string name="set_move_title">PLAY AS:</string>
    <string name="set_rm">REMOVE ADS</string>
    <string name="set_rm_title">PREMIUM:</string>
    <string name="set_sounds_off">OFF</string>
    <string name="set_sounds_on">ON</string>
    <string name="set_sounds_title">SOUNDS:</string>
    <string name="set_sp">CONTACT US</string>
    <string name="set_sp_title">SUPPORT:</string>
    <string name="set_title_top">SETTINGS</string>
    <string name="set_view_0">TOP</string>
    <string name="set_view_1">FRONT</string>
    <string name="set_view_title">VIEW:</string>
</resources>