<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/topLayout" android:background="@drawable/bg2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@id/titlel" android:background="#b4000000" android:padding="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
        <TextView android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_title_top" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <ScrollView android:id="@id/sv" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/btns" android:layout_below="@id/titlel">
        <RelativeLayout android:id="@id/inner" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/linerThemes" android:background="#b4000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <HorizontalScrollView android:id="@id/hsv" android:paddingLeft="5.0dip" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureAllChildren="false" android:fillViewport="true">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/innerLay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip">
                        <LinearLayout android:orientation="horizontal" android:background="#00ff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
                            <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:id="@id/button_tm1" android:background="#ff666666" android:padding="5.0dip" android:layout_width="117.0dip" android:layout_height="65.0dip" android:layout_margin="2.0dip" android:soundEffectsEnabled="false" android:onClick="tm1Clicked" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:background="#00ff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
                            <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:id="@id/button_tm6" android:background="#ff666666" android:padding="5.0dip" android:layout_width="117.0dip" android:layout_height="65.0dip" android:layout_margin="2.0dip" android:soundEffectsEnabled="false" android:onClick="tm6Clicked" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:background="#00ff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
                            <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:id="@id/button_tm5" android:background="#ff666666" android:padding="5.0dip" android:layout_width="117.0dip" android:layout_height="65.0dip" android:layout_margin="2.0dip" android:soundEffectsEnabled="false" android:onClick="tm5Clicked" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:background="#00ff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
                            <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:id="@id/button_tm2" android:background="#ff666666" android:padding="5.0dip" android:layout_width="117.0dip" android:layout_height="65.0dip" android:layout_margin="2.0dip" android:soundEffectsEnabled="false" android:onClick="tm2Clicked" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:background="#00ff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
                            <Button android:textSize="13.0dip" android:textColor="#ffffffff" android:id="@id/button_tm7" android:background="#ff666666" android:padding="5.0dip" android:layout_width="117.0dip" android:layout_height="65.0dip" android:layout_margin="2.0dip" android:soundEffectsEnabled="false" android:onClick="tm7Clicked" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:background="#00ff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
                            <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:id="@id/button_tm3" android:background="#ff666666" android:padding="5.0dip" android:layout_width="117.0dip" android:layout_height="65.0dip" android:layout_margin="2.0dip" android:soundEffectsEnabled="false" android:onClick="tm3Clicked" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:background="#00ff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
                            <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:id="@id/button_tm4" android:background="#ff666666" android:padding="5.0dip" android:layout_width="117.0dip" android:layout_height="65.0dip" android:layout_margin="2.0dip" android:soundEffectsEnabled="false" android:onClick="tm4Clicked" />
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/hsv6" android:background="#64ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:weightSum="4.0" android:layout_below="@id/linerThemes">
                <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:gravity="center|left" android:id="@id/tx4" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/set_view_title" android:layout_weight="2.0" android:layout_centerHorizontal="true" />
                <Button android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_v1" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/set_view_0" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="v0Clicked" />
                <Button android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_v2" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/set_view_1" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="v1Clicked" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/hsv2" android:background="#64ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:weightSum="4.0" android:layout_below="@id/hsv6" android:layout_centerVertical="true">
                <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:gravity="center|left" android:id="@id/tx3" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/set_sounds_title" android:layout_weight="2.0" android:layout_centerHorizontal="true" />
                <Button android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_s1" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/set_sounds_on" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="sOnClicked" />
                <Button android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_s2" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/set_sounds_off" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="sOffClicked" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/hsv4" android:background="#64ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:weightSum="4.0" android:layout_below="@id/hsv2" android:layout_centerVertical="true">
                <TextView android:textSize="13.0dip" android:textColor="#ff000000" android:gravity="center|left" android:id="@id/tx4" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/set_move_title" android:layout_weight="2.0" android:layout_centerHorizontal="true" />
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="2.0">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:weightSum="2.0" android:layout_weight="2.0">
                        <Button android:textSize="10.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_pa1" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:text="@string/set_move_0" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="pa0Clicked" />
                        <Button android:textSize="10.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_pa2" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/set_move_1" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="pa1Clicked" />
                    </LinearLayout>
                    <Button android:textSize="10.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_paAlter" android:background="#c8000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/set_move_alter" android:soundEffectsEnabled="false" android:onClick="paAlterClicked" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/hsv5" android:background="#64ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:weightSum="4.0" android:layout_below="@id/hsv4" android:layout_centerVertical="true">
                <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:gravity="center|left" android:id="@id/tx5" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/set_helper_title" android:layout_weight="2.0" android:layout_centerHorizontal="true" />
                <Button android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_h1" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/set_sounds_on" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="h0Clicked" />
                <Button android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_h2" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/set_sounds_off" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="h1Clicked" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/hsv9" android:background="#64ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:weightSum="4.0" android:layout_below="@id/hsv5" android:layout_centerVertical="true">
                <TextView android:textSize="15.0dip" android:textColor="#ff000000" android:gravity="center|left" android:id="@id/tx10" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/set_rm_title" android:layout_weight="2.0" android:layout_centerHorizontal="true" />
                <Button android:textSize="10.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_rm" android:background="@drawable/xml_button_premium" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="-10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/set_rm" android:layout_weight="2.0" android:soundEffectsEnabled="false" android:onClick="rmClicked" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/hsv7" android:background="#64ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:weightSum="4.0" android:layout_below="@id/hsv9" android:layout_centerVertical="true">
                <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center|left" android:id="@id/tx7" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/set_sp_title" android:layout_weight="2.0" android:layout_centerHorizontal="true" />
                <Button android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_sp" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="-10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/set_sp" android:layout_weight="2.0" android:soundEffectsEnabled="false" android:onClick="spClicked" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/hsv3" android:background="#b42e1b05" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:weightSum="4.0" android:layout_below="@id/hsv4" android:layout_centerVertical="true">
                <TextView android:textSize="13.0sp" android:textColor="#ffffffff" android:gravity="center|left" android:id="@id/tx2" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="RESET PROGRESS:" android:layout_weight="3.0" android:layout_centerHorizontal="true" />
                <Button android:textSize="13.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_reset" android:background="#c8000000" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="RESET" android:layout_weight="1.0" android:onClick="resetProgressClicked" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/btns" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="10.0" android:layout_alignParentBottom="true" android:layout_centerVertical="true">
        <Button android:textSize="14.0dip" android:textColor="#ffffffff" android:id="@id/button_set" android:background="#c8000000" android:padding="15.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="10.0dip" android:text="@string/set_button_back" android:layout_weight="7.0" android:soundEffectsEnabled="false" android:onClick="backClicked" />
        <Button android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/button_rate" android:background="#b42e1b05" android:padding="0.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/set_button_rate" android:layout_weight="3.0" android:soundEffectsEnabled="false" android:onClick="rateClicked" />
    </LinearLayout>
</RelativeLayout>